@@ -8,6 +8,7 @@ Version 0.3.4 (under dev!)
 --------------------------
 
 * core: add new option weechat.look.input_share (task #9228)
+* core: fix memory leak when removing item in hashtable
 * core: use similar behaviour for keys bound to local or global history
   (bug #30759)
 * api: add priority for hooks (task #10550)
